[package]
name = "notiy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

mysql = "*"
lazy_static = "1.4.0"

